Somthing Something Dark Side

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -35,7 +35,7 @@
 
     <title>App</title>
 </head>
-<body class="blue-grey" ng-app="AppPrincipal">
+<body class="grey lighten-1" ng-app="AppPrincipal">
     <div ng-view="">
 
     </div>
