mailbox status images up

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -40,4 +40,14 @@
 
     </div>
 </body>
+<style media="screen" type="text/css">
+
+.bc{
+    background-image: url(../img/topCdoorC.png);
+    background-repeat: no-repeat;
+    height: 50%;
+    background-size: contain;
+    background-position: center;
+}
+</style>
 </html>
