mailbox status images up

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/jquery.matchHeight.js"></script>
     <script type="text/javascript" src="js/npm.js"></script>
     <script type="text/javascript" src="js/ng-google-chart.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -40,14 +41,4 @@
 
     </div>
 </body>
-<style media="screen" type="text/css">
-
-.bc{
-    background-image: url(../img/topCdoorC.png);
-    background-repeat: no-repeat;
-    height: 50%;
-    background-size: contain;
-    background-position: center;
-}
-</style>
 </html>
